fix: duplicate page aliases

--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen.adoc
@@ -38,20 +38,20 @@ Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellu
 ifdef::item[]
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Artikel*.
 Solche Eigenschaften werden zur Charakterisierung von Produkten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:crm:kontakte-verwalten.adoc#950[Kontakte] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorte] verwendet werden.
-Klicke auf die Links, um mehr über diese andere Anwendungsfälle zu erfahren.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:crm:kontakte-verwalten.adoc#950[Kontakten] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorten] verwendet werden.
+Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 endif::item[]
 ifdef::crm[]
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Kontakt*.
 Solche Eigenschaften werden z.B. zur Ausgabe von Kontakteigenschaften auf deinen Dokumenten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorte] verwendet werden.
-Klicke auf die Links, um mehr über diese andere Anwendungsfälle zu erfahren.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorten] verwendet werden.
+Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 endif::crm[]
 ifdef::stock[]
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Lagerort*.
-Solche Eigenschaften werden zur Charakterisierung von deiner Lagerorte verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:crm:kontakte-verwalten.adoc#950[Kontakte] verwendet werden.
-Klicke auf die Links, um mehr über diese andere Anwendungsfälle zu erfahren.
+Solche Eigenschaften werden zur Charakterisierung von deinen Lagerorten verwendet.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:crm:kontakte-verwalten.adoc#950[Kontakten] verwendet werden.
+Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 endif::stock[]
 
 //Item, CRM, Stock
