--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -117,7 +117,11 @@ Vergewissere dich, dass du mit den im Menü *Einrichtung » Aufträge » Zahlung
 Aber in manchen Situationen willst du vielleicht stattdessen ein "UVP", "Setpreis" oder "Aktionspreis" erstellen.
 Falls ja, dann wähle den entsprechenden Preistyp (icon:check-square[role="blue"]).
 
-*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis darzustellen. Der UVP wird im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt. Produkte können nicht zu dem UVP-Preis verkauft werden.
+*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis darzustellen.
+Produkte können nicht zu dem UVP-Preis verkauft werden.
+Damit der UVP im plentyShop angezeigt werden kann, muss die Variante mit dem UVP-Preis _und_ dem Standardpreis verknüpft sein.
+Außerdem muss der UVP-Preis höher als der Standardpreis sein.
+Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
 
 *Aktionspreis* = Ein Angebotspreis, der z.B. bei Amazon nur für eine begrenzte Zeit gilt.
 
@@ -210,7 +214,11 @@ Aber in manchen Situationen willst du vielleicht stattdessen ein "UVP", "Setprei
 Falls ja, dann aktiviere diese Option (icon:toggle-on[role="blue"]).
 Ein zusätzlicher Konfigurationsschritt wird eingeblendet. In diesem Schritt legst du die Art des zu erstellenden Verkaufspreises fest.
 
-*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis darzustellen. Der UVP wird im plentyShop in rot und durchgestrichen neben dem Verkaufspreis dargestellt. Produkte können nicht zu dem UVP-Preis verkauft werden.
+*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis darzustellen.
+Produkte können nicht zu dem UVP-Preis verkauft werden.
+Damit der UVP im plentyShop angezeigt werden kann, muss die Variante mit dem UVP-Preis _und_ dem Standardpreis verknüpft sein.
+Außerdem muss der UVP-Preis höher als der Standardpreis sein.
+Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
 
 *Aktionspreis* = Ein Angebotspreis, der z.B. bei Amazon nur für eine begrenzte Zeit gilt.
 
