--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -146,7 +146,7 @@ Aus dem Kontaktdatensatz des gewählten Kontaktes werden bereits Daten für das 
 |Wenn du einen xref:auftraege:abonnement.adoc#intable-subscription-default-status[Standardstatus] eingestellt hast, ist dieser hier vorausgewählt. Darüber hinaus stehen dir hier alle xref:auftraege:auftraege-verwalten.adoc#1220[Status] zur Verfügung, die du in deinem plentymarkets System angelegt hast. Wähle den passenden Status manuell aus der Dropdown-Liste aus.
 
 |[#intable-subscription-tags]*Tags*
-|Hier stehen dir xref:willkommen:tags.adoc#[Tags] zur Verfügung, die du in deinem plentymarkets System angelegt hast. Wähle den gewünschten Tag aus der Dropdown-Liste aus.
+|Hier stehen dir Tags zur Verfügung, die du in deinem plentymarkets System angelegt hast. Wähle den gewünschten Tag aus der Dropdown-Liste aus.
 
 |[#intable-subscription-invoice-address]*Rechnungsadresse*
 |Wähle aus der Dropdown-Liste die gewünschte Rechnungsadresse des ausgewählten Kontaktes aus. Zur Auswahl stehen die Adressen, die auch im dazugehörigen Kontakdatensatz hinterlegt sind. Zur Unterscheidung von mehreren hinterlegten Adressen für einen Kontakt wird die Adress-ID ebenfalls angegeben. Wenn eine Adresse als primäre Rechnungsadresse festgelegt ist, wird diese durch einen Stern gekennzeichnet. +
@@ -374,7 +374,7 @@ Ist bereits eine Eigenschaft mit einer Auftragsposition verknüpft, wird diese i
 Um die Eigenschaften zu bearbeiten oder weitere bereits bestehende Eigenschaften zu einer Auftragspositionen hinzuzufügen, klicke auf *Eigenschaften bearbeiten* (icon:edit[set=material]). Das Bearbeitungsfenster *Eigenschaften von [ausgewählte Auftragsposition mit ID] bearbeiten* öffnet sich und du kannst weitere Anpassungen vornehmen.
 Folgende Angaben zu Eigenschaften einer Auftragsposition werden hier angezeigt:
 
-* *Name* = Der Name der Eigenschaft wird angezeigt.
+* *Name* = Der Name der Eigenschaft wird angezeigt. Ein rotes Sternchen am Namen der Eigenschaft kennzeichnet, dass es eine *Verpflichtende* Eigenschaft ist. Ob eine Eigenschaft *Verpflichtend* ist, bestimmst du in den Einstellungen der Eigenschaften im Bereich xref:artikel:eigenschaften.adoc#property-options[Optionen]. Wähle in der Dropdown-Liste *Bestelloptionen* die Einstellung *Verpflichtend* aus.
 * *Wert* = Der Wert der Eigenschaft wird angezeigt. Der Wert ist anpassbar. Je nach Eigenschaftstyp kannst du eine Auswahl treffen, den Wert ändern, einen Wert eingeben oder eine Datei hochladen. Die Änderungen gelten nur für dieses Abonnement.
 * *Aufpreis* = Der Aufpreis der Eigenschaft, sofern sie einen zugeordnet hat, wird angezeigt. Der Aufpreis ist bearbeitbar. Die Änderungen gelten nur für dieses Abonnement.
 
