--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -40,7 +40,7 @@ Das heißt, falls du dein plentymarkets System noch nicht eingerichtet hast, sol
 
 * xref:warenwirtschaft:lager-einrichten.adoc#[Lager]
 * xref:auftraege:auftragsherkunft.adoc#[Auftragsherkünfte]
-* xref:willkommen:tags.adoc#[Tags]
+* xref:artikel:markierungen.adoc#400[Tags]
 * xref:artikel:barcodes.adoc#[Barcodes]
 * xref:artikel:attribute.adoc#[Attribute]
 * xref:artikel:eigenschaften.adoc#[Eigenschaften]
