--- a/docs/de-de/modules/daten/pages/elasticSync-auftraege.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-auftraege.adoc
@@ -546,11 +546,11 @@ Eigene Eigenschaftstypen für Aufträge können per link:https://developers.plen
 [#2390]
 ==== Datum
 
-Du möchtest dem Auftrag ein bestimmtes Datum zuordnen? Gib das Datum in dem Format, das du im *Abgleich* gewählt hast, in deine CSV-Datei ein und wähle in der Zuordnung aus, um welchen Datumstyp es sich handelt.
+Du möchtest dem Auftrag ein bestimmtes Datum zuordnen? Gib das Datum in dem Format ein, das du in den Einstellungen im Bereich Abgleich in den *Import Optionen* für das Feld *Datumsformat* ausgewählt hast. Wähle in der Zuordnung aus, um welchen Datumstyp es sich handelt.
 
 *_Standardwert_*: Kein Standardwert
 
-*_Zulässige Importwerte_*: Numerisch
+*_Zulässige Importwerte_*: Numerisch (Format wie im Abgleich gewählt)
 
 *_Zur Verfügung stehende Datumstypen_*:
 
