--- a/docs/de-de/modules/daten/pages/elasticSync-kontakte.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-kontakte.adoc
@@ -38,6 +38,20 @@ Wenn du neue Kontakte importieren möchtest, lasse dieses Feld leer. Beim Import
 |Lieferadress-ID
 |In welcher Spalte der CSV-Datei werden die IDs der Lieferadresse aufgelistet? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du bestehende Lieferadressen _bestehender Kontakte aktualisieren_ möchtest.
 
+|Externe Nummer (ID)
+a|In welcher Spalte der CSV-Datei werden die externen Nummern (IDs) deiner Kontakte aufgelistet? Wähle diese Spalte hier. +
+Beachte die folgenden Hinweise zur Logik des Imports der externen Nummer, wenn die externe Nummer einmal oder mehrere Male in deiner Importdatei vorhanden ist:
+
+* Die externe Nummer ist einmal in der Importdatei vorhanden:
+** Wenn die externe Nummer _nicht_ in deinem System vorhanden ist, wird die externe Nummer erstellt.
+** Wenn die externe Nummer einmal in deinem System vorhanden ist, wird die externe Nummer aktualisiert.
+** Wenn die externe Nummer mindestens 2 Mal in deinem System vorhanden ist, wird die externe Nummer weder erstellt noch aktualisiert. Stattdessen wird eine Fehlermeldung angezeigt, dass sich eine Dublette in deinem System befindet. 
+
+* Die externe Nummer ist mindestens 2 Mal in deiner Importdatei vorhanden:
+** Wenn die externe Nummer _nicht_ in deinem System vorhanden ist, wird nur die erste Zeile der Importdatei aktualisiert. Die anderen Zeilen werden ignoriert und eine Fehlermeldung wird angezeigt, dass sich eine Dublette in deiner Importdatei befindet.
+** Wenn die externe Nummer einmal in deinem System vorhanden ist, wird nur die erste Zeile der Importdatei aktualisiert. Die anderen Zeilen werden ignoriert und eine Fehlermeldung wird angezeigt, dass sich eine Dublette in deiner Importdatei befindet.
+** Wenn die externe Nummer mehr als 2 Mal in deinem System vorhanden ist, wird die externe Nummer weder erstellt noch aktualisiert. Stattdessen werden 2 Fehlermeldungen angezeigt: eine Fehlermeldung für die Dublette in der Importdatei, die andere Fehlermeldung für die Dublette in deinem System.
+
 |===
 
 [#zuordnungsfelder]
