--- a/docs/de-de/modules/daten/pages/formatdesigner-lager.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-lager.adoc
@@ -1,6 +1,7 @@
 = warehouse
 :keywords: FormatDesigner, Format-Typen, Export, Daten exportieren, Lager, Lagerdaten, Lager exportieren, Lagerdaten exportieren
 :description: Mit Formaten des Typs Lager exportierst du Lager.
+:page-aliases: lager.adoc
 :author: team-stock
 
 Mit Formaten des Typs *warehouse* exportierst du Lagerdaten.
