--- a/docs/de-de/modules/daten/pages/formatdesigner-listing.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-listing.adoc
@@ -1,6 +1,7 @@
 = Listing
 :keywords: Listing exportieren, Listings exportieren
 :description: Mit Formaten des Typs Listing exportierst du Listings.
+:page-aliases: listing.adoc
 :author: team-plenty-channel
 :id: AHTOWEL
 
