--- a/docs/de-de/modules/maerkte/pages/amazon-fulfillment.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fulfillment.adoc
@@ -1,6 +1,7 @@
 = Amazon: FBA vs. MFN
 :keywords: Amazon FBA, FBA, FBA-Aufträge, FBA-Auftrag, MFN, Versand von Amazon-Aufträgen, Amazon Versand
 :description: Multi-Channel in plentymarkets: Bereite deinen Versand für Amazon-Aufträge vor.
+:page-aliases: fulfillment.adoc
 :id: QYFYPFT
 :author: team-plenty-channel
 
