--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -12,7 +12,7 @@ Mit über 120 Millionen Käufer:innen auf der ganzen Welt bietet eBay hervorrage
 Du benötigst die eBay-Zugangsdaten bestehend aus Nutzername und Passwort. Diese Daten erhältst du von eBay. Hierzu musst du zunächst bei link:https://scgi.ebay.de/ws/eBayISAPI.dll?RegisterEnterInfo&bizflow=2[eBay^]{nbsp}icon:external-link[] ein Mitgliedskonto erstellen.
 
 [#200]
-== eBay-Basiseinstellungen in plentymarkets vornehmen
+== Marktplatz in plentymarkets einrichten
 
 In diesem Kapitel findest du Informationen zu Einstellungen und Funktionen für den Marktplatz eBay.
 Dieses Video-Tutorial bietet dir einen ersten Überblick über die Basiseinstellungen für eBay.
@@ -137,7 +137,7 @@ eBay-Shop-Kategorien laden:
 [TIP]
 .Shop-Kategorien und Rücknahmebedingungen neu einstellen
 ====
-Nach Änderungen an den eBay-Kontodaten müssen dein Shop-Kategorien sowie Rücknahmebedingungen neu eingestellt werden. Die *Shop-Kategorien* stellst du direkt in diesem Menü ein. Die *Rücknahmebedingungen* werden unter *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Rücknahmebedingungen* festgelegt.
+Nach Änderungen an den eBay-Kontodaten müssen dein Shop-Kategorien sowie Rücknahmebedingungen neu eingestellt werden. Die *Shop-Kategorien* stellst du direkt in diesem Menü ein. Die *Rücknahmebedingungen* werden unter *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen* festgelegt.
 ====
 
 [#600]
@@ -335,7 +335,7 @@ Wenn die Option *Verkäufe nicht abrufen* bei der Einstellung *Aufträge abrufen
 
 Im Menü *Einrichtung » Märkte » eBay » Einstellungen » Tab: Versandprofilverknüpfungen* verknüpfst du eBay-Versandprofile mit den plentymarkets Versandprofilen. Ein verknüpftes Versandprofil wird automatisch beim Auftragsimport verwendet, wenn das Versandprofil zu den Auftragsdaten, zum Beispiel zu Kontoeinstellungen und Marktplatzeinstellungen, eines Listings passt und im Tab *Global* eines Artikels aktiviert ist. Ist das verknüpfte Versandprofil nicht aktiv, wird automatisch das aktive Versandprofil mit der höchsten Priorität verwendet.
 
-Bevor du eBay-Versandprofile mit den plentymarkets Versandprofilen verknüpfen kannst, musst du im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen* Zahlungs-, Versand- und Rahmenbedingungen festlegen und Versandprofile erstellen.
+Bevor du eBay-Versandprofile mit den plentymarkets Versandprofilen verknüpfen kannst, musst du im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen* Rahmenbedingungen für eBay festlegen und Versandprofile erstellen.
 
 [#800]
 === Retourengründe und -status verknüpfen
@@ -761,10 +761,299 @@ Wähle *Nein*, wenn du die Abwesenheitseinstellungen wieder deaktivieren möchte
 |Gib in das Freitextfeld einen Text ein, der deinen Kund:innen in deinem eBay-Shop auf der Startseite angezeigt wird, wenn die Abwesenheitseinstellungen aktiviert sind. Du hast die Möglichkeit, in diesem Freitextfeld html-Formatierungen zu verwenden, um deinen Text zu formatieren.
 |====
 
+[#erweiterte-herstellerverantwortung]
+=== Angaben zur erweiterten Herstellerverantwortung einstellen
+
+Die europäische Verordnung zur erweiterten Herstellerverantwortung, kurz EPR (Extended Producer Responsibility), verpflichtet Hersteller:innen und Händler:innen dazu, Verantwortung für die Rücknahme, Entsorgung und Wiederaufbereitung von bestimmten Produkten zu übernehmen. Dazu zählen beispielsweise Elektrogeräte oder Möbel. In einigen Ländern sind beim Verkauf dieser Produkte Angaben zur Rücknahme, Entsorgung und Wiederaufbereitung bereits verpflichtend. +
+In diesem Kapitel erfährst du, wie du Rücknahmebedingungen für Elektrogeräte, Angaben zur Product Compliance und Recyclinggebühren in plentymarkets einstellst.
+
+[#altgeraeteabholung]
+==== Bedingungen zur Rücknahme nach dem ElektroG-Gesetz festlegen
+
+Ab dem 01. Januar 2022 sind Händler:innen gesetzlich verpflichtet, Kund:innen bei der Lieferung eines Elektrogeräts die kostenlose Abholung eines gleichwertigen Altelektrogeräts anzubieten. In den *Rücknahmebedingungen nach ElektroG* bestimmst du, für welche Geräte die kostenlose Abholung eines Altgeräts möglich ist.
+
+Du kannst Rücknahmebedingungen nach ElektroG bei eBay oder in plentymarkets im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen nach ElektroG* einstellen. Wenn du hier Bedingungen einträgst, werden die bei eBay gespeicherten Rücknahmebedingungen überschrieben. +
+Du kannst maximal drei Rücknahmebedingungen nach dem ElektroG-Gesetz einstellem.
+
+Rücknahmebedingungen nach ElektroG kannst du für die folgenden eBay-Länderplattformen einstellen:
+
+* Australien
+* Deutschland
+* Frankreich
+* Kanada
+* USA
+
+[IMPORTANT]
+.Rücknahmebedingungen nach ElektroG für Frankreich verpflichtend
+====
+Wenn du deine Artikel mit eBay in Frankreich verkaufst, musst du für diese Länderplattform verpflichtend Rücknahmebedingungen nach ElektroG festlegen.
+====
+
+[.instruction]
+Rücknahmebedingungen für Elektrogeräte einstellen:
+
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen nach ElektroG » Tab: Neu*.
+. Nimm die Einstellungen gemäß <<#ebay-elektrog>> vor.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+
+[[ebay-elektrog]]
+.Einstellungen *Rücknahmebedingungen nach ElektroG*
+[cols="1,3a"]
+|====
+| Einstellung | Erläuterung
+
+| *Profil-Name*
+| Profil-Name eingeben. Es handelt sich um einen internen Namen für Händler:innen, der nicht am Listing sichtbar ist.
+
+| *Beschreibung*
+| Beschreibungstext eingeben, der bei eBay unter Rücknahmebedingungen angezeigt wird. Hier muss stehen, dass eine kostenlose Rücknahme von Altgeräten möglich ist.
+
+| *Bezeichnung*
+| Bezeichnung für die Rücknahmenbedingungen nach ElektroG eingeben. Die Bezeichnung ist bei deinem Listing auf eBay sichtbar.
+|====
+
+[#product-compliance]
+==== Angaben zur Product Compliance einstellen
+
+Mit der Product Compliance stellst du spezifische Produktinformationen zur Verfügung und machst Angaben zur Produktkonformität. Diese Informationen sind je nach Produkttyp unterschiedlich. Wenn du zum Beispiel Batterien verkaufst, kannst du in der Product Compliance spezifische Informationen zu den Batterien angeben, wenn nötig.
+
+Du kannst die Angaben zur Product Compliance bei eBay oder in plentymarkets im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Product Compliance* einstellen. Wenn du hier Bedingungen einträgst, werden die bei eBay gespeicherten Angaben überschrieben. +
+Für die Product Compliance kannst du maximal zehn Bedingungen erstellen.
+
+Angaben zur Product Compliance kannst du für die folgenden eBay-Länderplattformen einstellen:
+
+* Australien
+* Deutschland
+* Frankreich
+* Kanada
+* USA
+
+[IMPORTANT]
+.Angaben zur Product Compliance für Frankreich verpflichtend
+====
+Wenn du deine Artikel mit eBay in Frankreich verkaufst, musst du für diese Länderplattform verpflichtend Angaben zur Product Compliance machen.
+====
+
+[.instruction]
+Angaben zur Product Compliance einstellen:
+
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Product Compliance » Tab: Neu*.
+. Nimm die Einstellungen gemäß <<#ebay-product-compliance>> vor.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+
+[[ebay-product-compliance]]
+.Einstellungen *eBay Product Compliance*
+[cols="1,3a"]
+|====
+| Einstellung | Erläuterung
+
+| *Profil-Name*
+| Profil-Name eingeben. Es handelt sich um einen internen Namen für Händler:innen, der nicht am Listing sichtbar ist.
+
+| *Beschreibung*
+| Beschreibungstext eingeben, der bei eBay im Feld *Product Compliance* angezeigt wird. Hier werden spezifische Produktinformationen angegeben.
+
+| *Bezeichnung*
+| Bezeichnung für die Product Compliance eingeben. Die Bezeichnung ist bei deinem Listing auf eBay sichtbar.
+|====
+
+[#recycling-gebuehren]
+==== Recyclinggebühren einstellen
+
+Für bestimmte Produktkategorien kann bei eBay eine Recyclinggebühr (Eco-Participation-Gebühr) angegeben werden. Zu diesen Produkten gehören Elektrogeräte und Möbel. Die Recyclinggebühr ist bereits im Verkaufspreis des Artikels enthalten, wird aber separat aufgeführt. Auf eBay wird die Recyclinggebühr auf der Seite des Listings unter dem Verkaufspreis angezeigt. +
+Wie hoch die Recyclinggebühr für einen Artikel ist, erfährst du vom Hersteller oder Lieferanten des Artikels.
+
+[IMPORTANT]
+.Recyclinggebühr für Frankreich verpflichtend
+====
+Wenn du deine Artikel mit eBay in Frankreich verkaufst, bist du gesetzlich dazu verpflichtet, eine Recyclinggebühr für Artikel der Kategorien *Elektrogeräte* und *Möbel* anzugeben. +
+Die Höhe der Recyclinggebühr erfährst du vom Hersteller oder Lieferanten des Artikels. Wenn du den Artikel selbst herstellst oder nach Frankreich importierst, wende dich an einen Eco-Organisme-Betrieb, um die Recyclinggebühr zu erfragen.
+====
+
+In plentymarkets wird die Recyclinggebühr mit der Eigenschaft *EcoParticipationFee* angegeben, die du im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* erstellst. Damit die Eigenschaft *EcoParticipationFee* korrekt übertragen wird, muss sie genauso heißen wie auf eBay. +
+Verknüpfe die Eigenschaft *EcoParticipationFee* anschließend mit dem Artikel.
+
+[.instruction]
+Eigenschaft *EcoParticipatonFee* erstellen:
+
+. Öffne das Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*.
+. Klicke auf (icon:plus-square-o[]) *Eigenschaft erstellen*.
+. Nimm die Einstellungen vor. Beachte dabei die Erläuterungen in <<#einstellungen-eco-participation-fee>>.
+. Nimm die weiteren Einstellungen in den Bereichen *Gruppen*, *Sichtbarkeiten* und *Optionen* vor wie gewünscht.
+. Speichere (icon:save[set=plenty]) die Einstellungen. +
+→ Die Eigenschaft wurde erstellt.
+
+[[einstellungen-eco-participation-fee]]
+.Einstellungen für die Eigenschaft *EcoParticipationFee*
+[cols="1,3a"]
+|====
+|Einstellung |Erläuterung
+
+2+| *Details*
+
+| *Bereich*
+| *Artikel* wählen.
+
+| *Typ*
+| *Kommazahl* wählen.
+
+| *Position*
+| Position eingeben.
+
+2+| *Namen*
+
+| *Name*
+| *EcoParticipationFee* eingeben. +
+*_Hinweis:_* Die Eigenschaft muss genauso heißen wie auf eBay, da sie ansonsten nicht korrekt übertragen werden kann.
+
+| *Beschreibung*
+| Beschreibung eingeben.
+
+2+| *Sichtbarkeiten*
+
+| *Herkunft*
+| eBay-Plattform wählen, für die Recyclinggebühren verwendet werden sollen. 
+|====
+
+Verknüpfe die eben erstellte Eigenschaft *EcoParticipationFee* nun mit der Variante, für die du eine Recyclinggebühr angeben willst.
+
+[.instruction]
+Eigenschaft *EcoParticipatonFee* mit Variante verknüpfen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen]*.
+. Wechsele in das *Tab: Varianten*.
+. Öffne die Variante, die du verknüpfen möchtest.
+. Wechsele in das *Tab: Eigenschaften*.
+. Wähle im Bereich *Varianteneigenschaften* aus der Dropdown-Liste *Eigenschaften* die Eigenschaft *EcoParticipationFee* und klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
+→ Die Eigenschaft wird hinzugefügt.
+. Gib in der Dropdown-Liste *Wert* den Betrag der Recyclinggebühr ein. +
+*_Hinweis:_* Die Recyclinggebühr erfährst du vom Hersteller oder Lieferanten des Artikels.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+
+[TIP]
+.Recyclinggebühr an aktiven Listings anzeigen
+====
+Nutze die Gruppenfunktion im Menü *Listings » Aktive Listings*, um neu erstellte Recyclinggebühren bei aktiven Listings anzuzeigen. Wähle dazu unter *eBay-Optionen aktualisieren* eine der Optionen *Menge, Preis und Varianten* oder *Varianten erneuern* und führe die Gruppenfunktion aus, damit Recyclinggebühren an deinen aktiven Listings angezeigt werden.
+====
+
+[#upin]
+==== Eindeutige Hersteller-Identifikationsnummer (UPIN) angeben
+
+Für Artikel aus bestimmten Produktkategorien musst du eine eindeutige Hersteller-Identifikationsnummer (UPIN oder SYDEREP-Nummer) angeben, wenn du deine Artikel mit eBay in Frankreich verkaufst. In welchen Produktkategorien du UPINs angeben musst, erfährst du bei eBay unter link:https://www.ebay.de/help/selling/selling/extended-producer-responsibility-for-business-sellers?id=5314#section1[UPIN (eindeutige Hersteller-Identifikationsnummer)^]{nbsp}icon:external-link[]. +
+Du erhältst die UPIN eines Artikels vom Hersteller oder Lieferanten des Artikels.
+
+[IMPORTANT]
+.UPIN für Frankreich verpflichtend
+====
+Wenn du deine Artikel mit eBay in Frankreich verkaufst, bist du gesetzlich dazu verpflichtet, UPINs für Artikel aus bestimmten Kategorien anzugeben. +
+Die UPIN eines Artikels erhältst du vom Hersteller oder Lieferanten des Artikels. Wenn du den Artikel selbst herstellst oder nach Frankreich importierst, wende dich an einen Eco-Organisme-Betrieb, um die UPIN zu erhalten.
+====
+
+In plentymarkets gibst du UPINs mit Eigenschaften an, die du im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* erstellst. Damit die Eigenschaften für die UPINs korrekt übertragen werden, müssen sie genauso heißen wie auf eBay. +
+Verknüpfe die erstellten Eigenschaften für die UPINs anschließend mit dem Artikel.
+
+Erstelle die folgenden Eigenschaften, um UPINs anzugeben:
+
+* *ProducerProductID* (Herstellerprodukt-ID)
+* *ProductPackageID* (Produktpaket-ID)
+* *ShipmentPackageID* (Versandpaket-ID)
+* *ProductDocumentationID* (Produktdokument-ID)
+
+*_Hinweis:_* Die Eigenschaften müssen genauso heißen wie auf eBay, da sie ansonsten nicht korrekt übertragen werden können.
+
+[.instruction]
+Eigenschaft für UPIN erstellen:
+
+. Öffne das Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*.
+. Klicke auf (icon:plus-square-o[]) *Eigenschaft erstellen*.
+. Nimm die Einstellungen vor. Beachte dabei die Erläuterungen in <<#einstellungen-upin>>.
+. Nimm die weiteren Einstellungen in den Bereichen *Gruppen*, *Sichtbarkeiten* und *Optionen* vor wie gewünscht.
+. Speichere (icon:save[set=plenty]) die Einstellungen. +
+→ Die Eigenschaft wurde erstellt.
+
+[[einstellungen-upin]]
+.Einstellungen für UPIN-Eigenschaften
+[cols="1,3a"]
+|====
+|Einstellung |Erläuterung
+
+2+| *Details*
+
+| *Bereich*
+| *Artikel* wählen.
+
+| *Typ*
+| *Text* wählen.
+
+| *Position*
+| Position eingeben.
+
+2+| *Namen*
+
+| *Name*
+| Name der Eigenschaft eingeben. +
+Folgende Eigenschaften müssen für UPINs erstellt werden:
+
+*ProducerProductID*
+
+_oder_
+
+*ProductPackageID*
+
+_oder_
+
+*ShipmentPackageID*
+
+_oder_
+
+*ProductDocumentationID*
+
+*_Hinweis:_* Die Eigenschaft muss genauso heißen wie auf eBay, da sie ansonsten nicht korrekt übertragen werden kann.
+
+| *Beschreibung*
+| Beschreibung eingeben.
+
+2+| *Sichtbarkeiten*
+
+| *Herkunft*
+| eBay-Plattform wählen, für die UPINs verwendet werden sollen. 
+|====
+
+Verknüpfe die eben erstellte Eigenschaft nun mit der Variante, für die du eine UPIN angeben willst.
+
+[.instruction]
+Eigenschaft mit Variante verknüpfen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen]*.
+. Wechsele in das *Tab: Varianten*.
+. Öffne die Variante, die du verknüpfen möchtest.
+. Wechsele in das *Tab: Texte*.
+. Wähle aus der Dropdown-Liste *Eigenschaften* die gewünschte Eigenschaft und klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
+→ Die Eigenschaft wird hinzugefügt.
+. Gib in der Dropdown-Liste *Wert* die UPIN ein. +
+*_Hinweis:_* Die UPIN erfährst du vom Hersteller oder Lieferanten des Artikels.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+
+[TIP]
+.UPINs zu aktiven Listings hinzufügen
+====
+Nutze die Gruppenfunktion im Menü *Listings » Aktive Listings*, um neu erstellte UPINs bei aktiven Listings anzuzeigen. Wähle dazu unter *eBay-Optionen aktualisieren* eine der Optionen *Menge, Preis und Varianten*, *Varianten erneuern*, oder *Produktdetails* und führe die Gruppenfunktion aus, damit UPINs an deinen aktiven Listings angezeigt werden.
+====
+
 [#1800]
 === Rahmenbedingungen festlegen
 
-Hier erfährst du, wie du *Zahlungsbedingungen*, *Versandbedingungen* und *Rücknahmebedingungen* für deine eBay-Listings einstellst und *Versandprofile* erstellst. Diese Einstellungen werden für jedes eBay-Konto und jede Plattform vorgenommen.
+Hier erfährst du, wie du *Zahlungsbedingungen*, *Versandbedingungen* und *Rücknahmebedingungen* für deine eBay-Listings einstellst. Außerdem lernst du, wie du *Versandprofile* erstellst. +
+Die Einstellungen zu Rahmenbedingungen und Versandprofilen musst du für jedes eBay-Konto und jede Plattform vornehmen.
+
+[IMPORTANT]
+.Funktion "Rahmenbedingungen" auf eBay aktivieren
+====
+Damit du Rahmenbedingungen für eBay festlegen und weiterhin nutzen kannst, musst du auf eBay die Funktion *Rahmenbedingungen* aktivieren. +
+In deinem plentymarkets System wird dir im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen* neben der Dropdown-Liste für dein eBay-Konto angezeigt, ob du die Funktion *Rahmenbedingungen* auf eBay bereits aktiviert hast. +
+* Wenn du die Funktion auf eBay aktiviert hast, ist die Schaltfläche grün.
+* Wenn du die Funktion noch nicht auf eBay aktiviert hast, ist die Schaltfläche rot. Über den angezeigten Link wirst du zu eBay weitergeleitet und kannst dort die Funktion *Rahmenbedingungen* aktivieren.
+====
 
 Eine Zusammenfassung zu den Einstellungen für eBay-Rahmenbedingungen erhältst du in diesem Video-Tutorial:
 
@@ -785,7 +1074,7 @@ In diesem Menü findest du eine Übersicht der bisher erstellten *Zahlungsprofil
 [.instruction]
 Profil erstellen:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Zahlungsbedingungen » Neu*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Zahlungsbedingungen » Neu*.
 . Nimm die Einstellungen gemäß <<#ebay-zahlungsbedingungen>> vor.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
@@ -820,7 +1109,7 @@ In diesem Menü legst du Bedingungen für den nationalen und internationalen Ver
 [.instruction]
 Einstellungen für nationalen Versand vornehmen:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen » Tab: Neu*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen » Tab: Neu*.
 . Nimm die Einstellungen gemäß <<#einstellungen-nationaler-versand>> vor.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
@@ -870,7 +1159,7 @@ a| Zusatzoptionen, zum Beispiel *Kostenloser Versand* oder *Expressversand*, wä
 [.instruction]
 Einstellungen für internationalen Versand vornehmen:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen » Tab: Neu*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen » Tab: Neu*.
 . Nimm die Einstellungen gemäß <<#einstellungen-nationaler-versand>> und <<#einstellungen-internationaler-versand>> vor.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
@@ -905,17 +1194,17 @@ Weitere Informationen findest du im Kapitel <<International verkaufen, Internati
 [#2100]
 ==== Rücknahmebedingungen festlegen
 
-Du kannst Rücknahmebedingungen bei eBay oder im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Rücknahmebedingungen* einstellen. Wenn du hier Bedingungen einträgst, werden die bei eBay gespeicherten Rücknahmebedingungen überschrieben. Eine Übersicht der bisher erstellten Profile für Rücknahmebedingungen wird angezeigt. Du bearbeitest oder löschst bestehende Profile und legst neue Profile an.
+Du kannst Rücknahmebedingungen bei eBay oder im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen* einstellen. Wenn du hier Bedingungen einträgst, werden die bei eBay gespeicherten Rücknahmebedingungen überschrieben. Eine Übersicht der bisher erstellten Profile für Rücknahmebedingungen wird angezeigt. Du bearbeitest oder löschst bestehende Profile und legst neue Profile an.
 
 [.instruction]
 Profil erstellen:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Rücknahmebedingungen » Tab: Neu*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen » Tab: Neu*.
 . Nimm die Einstellungen gemäß <<#ebay-rücknahmebedingungen>> vor.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
 [[ebay-rücknahmebedingungen]]
-.Einstellungen *eBay-Rücknahmebedingungen*
+.eBay-Rücknahmebedingungen
 [cols="1,3a"]
 |====
 | Einstellung | Erläuterung
@@ -984,14 +1273,20 @@ Profile im Tab *Übersicht* werden entweder mit *Y* (Yes) als Standard-Profil od
 | *Standort*
 | Artikelstandort eingeben.
 
-| *eBay-Zahlungsbedingungen*
-| Im Tab *eBay-Zahlungsbedingungen* festgelegte Bedingungen für das Versandprofil wählen.
+| *Zahlungsbedingungen*
+| Im Tab *Zahlungsbedingungen* festgelegte Bedingungen für das Versandprofil wählen.
 
-| *eBay-Versandbedingungen*
-| Im Tab *eBay-Versandbedingungen* festgelegte Bedingungen für das Versandprofil wählen.
+| *Versandbedingungen*
+| Im Tab *Versandbedingungen* festgelegte Bedingungen für das Versandprofil wählen.
 
-| *eBay-Rücknahmebedingungen*
-| Im Tab *eBay-Rücknahmebedingungen* festgelegte Bedingungen für das Versandprofil wählen.
+| *Rücknahmebedingungen*
+| Im Tab *Rücknahmebedingungen* festgelegte Bedingungen für das Versandprofil wählen.
+
+| *Rücknahmebedingungen nach ElektroG*
+| Im Tab *Rücknahmebedingungen nach ElektroG* festgelegte Bedingungen für das Versandprofil wählen.
+
+| *Product Compliance*
+| Im Tab *Product Compliance* festgelegte Bedingungen für das Versandprofil wählen.
 
 2+| Eingeschränkter Käuferkreis
 
@@ -1006,6 +1301,39 @@ a| Aktivieren, um den Käuferkreis einzuschränken. +
 
 | *Maximale Anzahl, die ein Käufer für die gesamte Laufzeit des Listings kaufen darf*
 | Stückanzahl angeben, die Käufer:innen während der gesamten Laufzeit des Listings kaufen dürfen. Den Wert *0* eingeben, um diese Funktion zu deaktivieren.
+|====
+
+[#rahmenbedingungen-importieren]
+==== Auf eBay erstellte Rahmenbedingungen importieren
+
+Wenn du auf eBay bereits Rahmenbedingungen erstellt hast, kannst du diese im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen* in dein plentymarkets System importieren. Zu den Rahmenbedingungen, die du hier importieren kannst, gehören die Zahlungsbedingungen, Versandbedingungen, Rücknahmebedingungen, Rücknahmebedingungen nach ElektroG und die Product Compliance. +
+Die auf eBay erstellten Rahmenbedingungen musst du für jede Kombination aus eBay-Konto und Länderplattform einzeln importieren. Wenn du zum Beispiel ein eBay-Konto und die Länderplattform *Deutschland* wählst, werden nur die Rahmenbedingungen für dieses Konto und dieses Land in plentymarkets importiert.
+
+[TIP]
+.In plentymarkets erstellte Rahmenbedingungen werden beim Import überschrieben
+====
+Wenn du die Rahmenbedingungen auf eBay einstellst, haben diese immer Vorrang vor den Rahmenbedingungen, die du in plentymarkets erstellt hast. Wenn du also die Rahmenbedingungen von eBay in dein plentymarkets System importierst, werden alle Einstellungen zu den eBay-Rahmenbedingungen in plentymarkets überschrieben.
+====
+
+[.instruction]
+Rahmenbedingungen importieren:
+
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen*.
+. Nimm die Einstellungen gemäß <<#rahmenbedingungen-importieren>> vor.
+. Klicke auf *Importieren*. +
+→ Die auf eBay erstellten Rahmenbedingungen werden in plentymarkets importiert.
+
+[[rahmenbedingungen-importieren]]
+.Einstellungen zum Importieren von Rahmenbedingungen
+[cols="1,3a"]
+|====
+| Einstellung | Erläuterung
+
+| *Konto*
+| eBay-Konto wählen, von welchem Rahmenbedingungen importiert werden sollen.
+
+| *Plattform*
+| eBay-Länderplattform wählen.
 |====
 
 [#2250]
@@ -1617,17 +1945,17 @@ Richte Click &amp; Collect at Argos ein, um die Vorteile auch mit plentymarkets 
 [#7020]
 === Click &amp; Collect für Listings aktivieren
 
-Im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen* aktivierst du Click &amp; Collect, indem du die Option *Buyers can collect the item at Argos with Click &amp; Collect* aktivierst. Die Versandbedingung muss anschließend mit dem eBay-Versandprofil verknüpft werden, welches am Listing gespeichert ist.
+Im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen* aktivierst du Click &amp; Collect, indem du die Option *Buyers can collect the item at Argos with Click &amp; Collect* aktivierst. Die Versandbedingung muss anschließend mit dem eBay-Versandprofil verknüpft werden, welches am Listing gespeichert ist.
 
 [.instruction]
 Click &amp; Collect für Listings aktivieren:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen*.
 . Öffne die gewünschte Versandbedingung, die für die Plattform UK gespeichert ist.
 . Aktiviere die Option *Buyers can collect the item at Argos with Click &amp; Collect.*.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 . Wechsele im gleichen Menü in das Tab *Versandprofile*.
-. Wähle für die Einstellung *eBay-Versandbedingungen* im Bereich *Allgemeine Angaben* die eben bearbeitete Versandbedingung.
+. Wähle für die Einstellung *Versandbedingungen* im Bereich *Allgemeine Angaben* die eben bearbeitete Versandbedingung.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
 Im Anschluss verknüpfst du im Menü *Listings » Listings bearbeiten » Tab: Base* das Versandprofil mit dem Listing. Wähle dazu bei der Einstellung *Versandprofil* das eben bearbeitete Versandprofil.
@@ -1637,7 +1965,7 @@ Im Anschluss verknüpfst du im Menü *Listings » Listings bearbeiten » Tab: Ba
 
 Auch bereits aktive Listings können für Click &amp; Collect freigeschaltet werden.
 
-Für die Aktualisierung von Listings im Menü *Listings » Aktive Listings* muss in der Gruppenfunktion die Aktion *Versandangabe* ausgewählt sein.
+Für die Aktualisierung von Listings im Menü *Listings » Aktive Listings* muss in der Gruppenfunktion die Aktion *Versandangaben/Custom Policies* ausgewählt sein.
 
 [.instruction]
 Aktive Listings für Click &amp; Collect per Gruppenfunktion aktualisieren:
@@ -1646,7 +1974,7 @@ Aktive Listings für Click &amp; Collect per Gruppenfunktion aktualisieren:
 . Aktiviere die Listings, die du aktualisieren möchtest.
 . Klicke auf *Gruppenfunktion*. +
 → Das Fenster *Gruppenfunktion* wird geöffnet.
-. Wähle im Bereich *eBay-Optionen aktualisieren* für die Option *Versandangabe* das mit Click &amp; Collect verknüpfte Versandprofil.
+. Wähle im Bereich *eBay-Optionen aktualisieren* für die Option *Versandangaben/Custom Policies* das mit Click &amp; Collect verknüpfte Versandprofil.
 . Klicke auf *Ausführen*, um die Listings zu aktualisieren.
 
 [#7040]
@@ -1862,7 +2190,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 [IMPORTANT]
 .eBay-Retourenbedingungen beachten
 ====
-Lehne nur Retouren ab, die gegen die Retourenbedingungen verstoßen, die du im Menü *Einstellungen » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Rücknahmebedingungen* festgelegt hast.
+Lehne nur Retouren ab, die gegen die Retourenbedingungen verstoßen, die du im Menü *Einstellungen » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen* festgelegt hast.
 ====
 
 :table-event-procedure: <<#ereignisaktion-retouren-ablehnen>>
@@ -2759,7 +3087,7 @@ Versandrabatte für Kombizahlungen synchronisieren:
 [TIP]
 .Versandrabatt für Kombizahlung anbieten
 ====
-Die von eBay importierten *Versandrabatte für Kombizahlung* wählst du im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen* aus.
+Die von eBay importierten *Versandrabatte für Kombizahlung* wählst du im Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen* aus.
 ====
 
 [#10800]
@@ -3009,7 +3337,7 @@ Mache deine deutschen Listings auf anderen eBay-Plattformen sichtbar und stelle 
 [.instruction]
 Internationalen Versand einrichten:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen*.
 . Wähle ein *eBay-Konto* und eine *Plattform*.
 . Wähle im Bereich *Versandarten International* die *Versandart*.
 . Gib die *Versandkosten* ein.
@@ -3073,7 +3401,7 @@ Als <<Versandbedingungen festlegen, Versandbedingungen>> wählst du neben der *V
 [.instruction]
 Einstellungen für internationalen Versand:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Versandbedingungen*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Versandbedingungen*.
 . Wähle im Bereich *National* die *Versandart*.
 . Gib die *Versandkosten* ein und wähle optional die *Zusatzoptionen*.
 . Wähle im Bereich *International* die *Versandart*.
@@ -3111,7 +3439,7 @@ Schließlich trägst du die <<Rücknahmebedingungen festlegen, Rücknahmebedingu
 [.instruction]
 Rücknahmebedingungen für eBay-Plattform eingeben:
 
-. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: eBay-Rücknahmebedingungen » Tab: Neu*.
+. Öffne das Menü *Einrichtung » Märkte » eBay » Rahmenbedingungen » Tab: Rücknahmebedingungen » Tab: Neu*.
 . Gib einen *Profilnamen* ein.
 . Gib bei *Beschreibung* einen Text für die *Rücknahmebedingungen* ein.
 . Wähle, ob eine *Rückgabe* möglich ist, wie lange die *Rückgabefrist* gilt und wer die *Rücksendekosten* trägt.
