--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -48,7 +48,7 @@ Du hast einen Vertrag mit Zalando abgeschlossen. Super. Wie geht es jetzt weiter
   ** Routen für Artikel und Bestände
   ** Benutzernamen und Kennwort
   ** Zugangsdaten zum plentymarkets FTP-Server für Silhouetten +
-  *_Tipp:_* Auf diesen FTP-Server sendet Zalando deine Silhouetten, damit sie in dein System importiert werden können.
+  *_Tipp:_* Auf diesen FTP-Server sendet Zalando deine Silhouetten, damit sie in dein System importiert werden können. plentymarkets importiert die Silhouetten jeden Mittwoch. 
 * Leite das ausgefüllte Formular an deine:n Zalando-Ansprechpartner:in weiter.
 * Durchlaufe den Assistenten *Kontoeinstellungen - Zalando*.
 * Richte die Schnittstelle zu Zalando wie auf dieser Seite beschreiben in deinem plentymarkets System ein.
