--- a/docs/en-gb/modules/business-decisions/pages/prohandel.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/prohandel.adoc
@@ -40,7 +40,7 @@ If you have not set up your plentymarkets system yet, then you should create the
 
 * xref:stock-management:setting-up-a-warehouse.adoc#[Warehouses]
 * xref:orders:order-referrer.adoc#[Order referrers]
-* xref:welcome:tags.adoc#[Tags]
+* xref:item:flags.adoc#400[Tags]
 * xref:item:barcodes.adoc#[Barcodes]
 * xref:item:attributes.adoc#[Attributes]
 * xref:item:properties.adoc#[Properties]
