--- a/docs/en-gb/modules/data/pages/elasticSync-orders.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-orders.adoc
@@ -547,11 +547,11 @@ Own property types for orders can be created via the link:https://developers.ple
 [#2390]
 ==== Date
 
-You want to assign a specific date to the order? Enter the date in the format you set in the *Matching* into your CSV file and select in the mapping which date type it is.
+You want to assign a specific date to the order? Enter the date in the format you selected in the matching settings for the field *Date format* in the *Import options*. Select in the mapping which date type it is.
 
 *_Default value_*: No default value
 
-*_Permitted import values_*: Numeric
+*_Permitted import values_*: Numeric (format as selected in matching settings)
 
 *_Available date types_*:
 
