--- a/docs/en-gb/modules/data/pages/formatdesigner-listing.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-listing.adoc
@@ -1,6 +1,7 @@
 = Listing
 :keywords: Export listings, Exporting listings
 :description: Use the Listing format to export listings.
+:page-aliases: listing.adoc
 :author: team-plenty-channel
 :id: AHTOWEL
 
