--- a/docs/en-gb/modules/data/pages/formatdesigner-properties.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-properties.adoc
@@ -1,5 +1,6 @@
 = Properties
 :keywords: Exporting property, Exporting properties, Property exporting, Properties exporting, Property export, Properties export, Export property, Export properties, Property-Export, Properties-Export, Export-Property, Export-Properties
+:page-aliases: properties.adoc
 :author: team-item
 
 ////
