--- a/docs/en-gb/modules/item/pages/new-item.adoc
+++ b/docs/en-gb/modules/item/pages/new-item.adoc
@@ -4,6 +4,10 @@
 :id: MNYRNTL
 :author: team-item
 
+////
+zuletzt bearbeitet 11.02.22
+////
+
 Have you already configured the xref:item:settings.adoc#[preparatory settings]?
 For example, have you create a category structure, sales prices and attributes?
 Then you’re ready to start entering item data into plentymarkets.
@@ -249,7 +253,6 @@ Displaying inactive items in the overview:
 
 Some items like shoes and t-shirts are sold in various sizes and colours.
 In other words: your customer doesn’t simply buy your t-shirt, but rather _a specific variation_ of your t-shirt, e.g. in the colour red and the size S.
-
 First, create all of the necessary variations.
 
 [.instruction]
@@ -291,6 +294,15 @@ a|Variations differ from each other in terms of their attribute values.
 . Look at the lower right corner and make sure the number of *combinations* seems to be correct. For example, if you combine the colours green and blue with the sizes S, M, L, then you will have 6 variations.
 . Click on icon:execute[set=plenty] *Create variations*.
 |====
+
+[TIP]
+.Number of possible combinations
+====
+In the lower right corner of the pop-up window, you see how many combinations are being created.
+Up to 4000 combinations can be created _at one time_.
+Note that it is possible to create more than 4000 variations.
+However, the variations will need to be created in multiple cycles.
+====
 
 ////
 [TIP]
