--- a/docs/en-gb/modules/markets/pages/amazon-fulfilment.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fulfilment.adoc
@@ -1,6 +1,7 @@
 = Amazon: FBA vs. MFN
 :keywords: Amazon FBA, FBA, FBA orders, FBA order
 :description: Multi-Channel in plentymarkets: Amazon FBA with plentymarkets.
+:page-aliases: fulfilment.adoc
 :id: QYFYPFT
 :author: team-plenty-channel
 
