--- a/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
@@ -1,9 +1,14 @@
 [[recommended-mappings]]
-[cols="2,1,4a,1"]
+[cols="2,1,5a,1"]
 |====
 |limango field |Mandatory? |Recommended mapping / notes | limango product level
 
 4+| Products
+
+| Merchant product ID
+| yes
+| Is automatically created from *Parent SKU* + *Colour*.
+| Product group
 
 | Product group ID
 | yes
@@ -21,26 +26,25 @@
 
 | Product name
 | yes
-| * *Name 1* + Own value `in` + Values of the attribute *Colour* + Separator *Space*
+| * *Item text » Name 1* + Own value `in` + Values of the attribute *Colour*; separator *Space*
 
 _or_
 
-* *Name 1* + Own value `in` + Values of a property *Colour* for variations + Separator *Space*
+* *Item text » Name 1* + Own value `in` + Values of a property *Colour* for variations; separator *Space*
 
 image::markets:limango-product-name.png[]
-
 
 *_Tip:_* To select the separator, click on *Settings* (icon:gear[])) at the right end of the row.
 | Product
 
 | Short description
 | no
-| * *Preview text*
+| * *Item text » Preview text*
 | Product
 
 | Description
 | yes
-a| * *Item text*
+a| * *Item text » Item text*
 
 Exception for selling shoes:
 
@@ -67,7 +71,11 @@ a| * Property linked to main variation
 | yes
 | * *All available images*
 
-The first 10 images activated for the referrer *limango* are exported that are linked to the colour variation with the highest position. Images are sorted by position. Any images with identical positions are sorted by ID.
+The following rules apply to the image export:
+
+* The first 10 images activated for the referrer *limango* are exported that are linked to the colour variation with the highest position.
+* The first image must be a cropped product image.
+* Images are sorted by position. Any images with identical positions are sorted by ID.
 | Product
 
 | Colour
@@ -78,11 +86,16 @@ _or_
 
 * Values of a variation property *Colour* +
 
-*_Tip:_* This field tells limango which attribute or property you use for colours. However, the export contains the value names that you mapped for the field *Colour value*. +
+*_Tip:_* This field tells limango which attribute or which property you use for colours. To create the item number, the colour is added to the SKU. As such, the colour must be a unique value, for example the manufacturer colour. +
 (see <<#905, Notes on mapping data fields>>)
 | Product
 
 4+| Product variations
+
+| Variation ID
+| yes
+| This is assigned automatically.
+| Variation
 
 | Manufacturer variation number
 | no
@@ -92,12 +105,6 @@ _or_
 | Variation status
 | yes
 | * *Active*
-| Variation
-
-| Variation stock
-| no
-| * *Stock » [Select 1 or more warehouses]* +
-*_Tip:_* Use the data fields in the group *Virtual warehouse* to export the stock quantity sum of all sales warehouses.
 | Variation
 
 | EAN / GTIN
@@ -114,6 +121,8 @@ _or_
 _or_
 
 * Property linked to variation
+
+*_Tip:_* The delivery time indicates when the order will arrive at the customer’s.
 | Variation
 
 | Max. delivery time
@@ -125,6 +134,9 @@ a| Maximum delivery time in working days
 _or_
 
 * Property linked to variation
+
+*_Tip:_* The delivery time indicates when the order will arrive at the customer’s.
+
 | Variation
 
 4+| Measurements
@@ -201,14 +213,16 @@ a| * Property for value + Separator *;* + Property for unit +
 
 | RRP
 | yes
-| * RRP for referrer *limango*
+| * *Sales price » [Select sales price of the type RRP for the referrer limango]*
 
-Add a fallback data field if necessary.
+*_Recommended fallback data field:_*
+
+* *Sales price » [Select the same sales price as for the data field "Gross sales price"]*
 | Variation
 
 | Gross sales price
 | yes
-| * Sales price for referrer *limango*
+| * *Sales price » [Select sales price for the referrer limango]*
 
 Add a fallback data field if necessary.
 | Variation
@@ -234,6 +248,9 @@ Only one category is exported per product. However, due to technical reasons, th
 | Brand
 | yes
 | * *Manufacturer*
+
+*_Tip:_* Cannot find a brand that you want to sell in the brand list? Contact the limango partner managers. They will add the brand to the list.
+
 | Product group
 
 4+| Gender
@@ -258,9 +275,9 @@ Only one category is exported per product. However, due to technical reasons, th
 
 *_Valid values:_*
 
-    ** Babys (babies)
-    ** Kinder (children)
-    ** Erwachsene (adults)
+    ** `Babys` (babies) = Children ≤ 1 year old
+    ** `Kinder` (children) = Children > 1 year old
+    ** `Erwachsene` (adults)
 
 | Product
 
@@ -323,21 +340,25 @@ _or_
 
 * Values of a variation property *Size*
 
-*_Note:_* The value *onesize* must be exported for products without a specific size.
+*_Note:_* The value *onesize* must be exported for products without a specific size. Therefore, also assign a value to the limango value *onesize*.
 | Variation
 
 4+| VAT class
 
 | VAT class normal
 | yes
-| * Select the VAT rate
+| * *VAT rate » [Select VAT rate for 19 %]*
+
+image::markets:limango-vat-1.png[]
 
 Add a fallback data field if necessary.
 | Variation
 
 | VAT class reduced
 | yes
-| * Select the VAT rate
+| * *VAT rate » [Select VAT rate for 7 %]*
+
+image::markets:limango-vat-2.png[]
 
 Add a fallback data field if necessary.
 | Variation
@@ -346,7 +367,7 @@ Add a fallback data field if necessary.
 
 | Merchant product ID
 | yes
-| *Parent-SKU* - plentymarkets value for *Colour value* is exported +
+| Is automatically created from *Parent SKU* + plentymarkets value for *Colour value*. +
 (see <<#905, Notes on mapping data fields>>)
 | Product
 
