--- a/docs/en-gb/modules/orders/pages/managing-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/managing-orders.adoc
@@ -558,7 +558,7 @@ To edit the properties or to add more already existing properties, click on *Edi
 
 The following information about order item properties can be found in the editing window *Edit properties of [selected order item with ID]*:
 
-* *Name* = The name of the property is displayed.
+* *Name* = The name of the property is displayed. A red asterisk marks the property as a *required* property. Whether a property is required is determined in the xref:item:properties.adoc#property-options[Options] area of the property settings. Select *Required* from the *Order options* drop-down list.
 * *Value* = The value of the property is displayed. The value is editable. Depending on the property type, you can either make a selection, edit the value, add a value or upload a file. The changes are only valid for this order.
 * *Surcharge* = The surcharge of the property is displayed, if a surcharge is set for the property. The surcharge is editable. The changes are only valid for this order.
 
