--- a/docs/en-gb/modules/payment/pages/cash-in-advance.adoc
+++ b/docs/en-gb/modules/payment/pages/cash-in-advance.adoc
@@ -74,7 +74,8 @@ Linking logo:
 . Click on *Container links*.
 . Expand the area Container links.
 . Select *Cash in advance icon* from the *Data provider* drop-down list.
-. Activate the container *Homepage: Payment method container*.
+. Activate the container *Homepage: Payment method container*. +
+→ This container is marked as deprecated. As this is only related to the ShopBuilder, you can still make this selection for the plentyShop LTS.
 . *Save* (icon:save[role="green"]) the settings. +
 → The logo of the payment method Cash in advance will be displayed on the homepage of your online shop.
 
