--- a/docs/de-de/modules/app/pages/best-practices.adoc
+++ b/docs/de-de/modules/app/pages/best-practices.adoc
@@ -1,6 +1,7 @@
 = Unternehmenskennzahlen
 :author: team-mobile
 :keywords: App Statistik, App Unternehmenskennzahlen, App Verkaufsstatistik, App Umsatz
+:page-aliases: kennzahlen.adoc
 :id: GQEJK5F
 
 [#100]
