--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -556,7 +556,7 @@ Um die Eigenschaften zu bearbeiten oder weitere bereits bestehende Eigenschaften
 
 Im Bearbeitungsfenster *Eigenschaften von [ausgewählte Auftragsposition mit ID] bearbeiten* findest du folgende Angaben zu der Eigenschaft einer Auftragsposition:
 
-* *Name* = Der Name der Eigenschaft wird angezeigt.
+* *Name* = Der Name der Eigenschaft wird angezeigt. Ein rotes Sternchen am Namen der Eigenschaft kennzeichnet, dass es eine *Verpflichtende* Eigenschaft ist. Ob eine Eigenschaft *Verpflichtend* ist, bestimmst du in den Einstellungen der Eigenschaften im Bereich xref:artikel:eigenschaften.adoc#property-options[Optionen]. Wähle in der Dropdown-Liste *Bestelloptionen* die Einstellung *Verpflichtend* aus.
 * *Wert* = Der Wert der Eigenschaft wird angezeigt. Der Wert ist anpassbar. Je nach Eigenschaftstyp kannst du eine Auswahl treffen, den Wert ändern, einen Wert eingeben oder eine Datei hochladen. Die Änderungen gelten nur für diesen Auftrag.
 * *Aufpreis* = Der Aufpreis der Eigenschaft, sofern sie einen zugeordnet hat, wird angezeigt. Der Aufpreis ist bearbeitbar. Die Änderungen gelten nur für diesen Auftrag.
 
