--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -329,7 +329,7 @@ Weitere Informationen zu Amazon Prime- und eBay-Aufträgen findest du auf den Ha
 |Aufträge werden anhand dessen gefiltert, ob sie eine Retourenpaketnummer enthalten oder nicht. Wähle den Filter *Ja* oder *Nein* aus der Dropdown-Liste.
 
 | *Tag*
-|Dieser Filter kann nur bei Nachbestellungen, Umbuchungen und Abonnements verwendet werden, da nur diesen Auftragstypen Tags zugeordnet werden können. Wird dieser Filter genutzt, werden die Aufträge anhand der ihnen zugeordneten xref:willkommen:tags.adoc#[Tags] gefiltert. Definiere nach Auswahl des Filters, welche Tags am Auftrag sein müssen, damit die Ereignisaktion für den Auftrag greift.
+|Dieser Filter kann nur bei Nachbestellungen, Umbuchungen und Abonnements verwendet werden, da nur diesen Auftragstypen Tags zugeordnet werden können. Wird dieser Filter genutzt, werden die Aufträge anhand der ihnen zugeordneten Tags gefiltert. Definiere nach Auswahl des Filters, welche Tags am Auftrag sein müssen, damit die Ereignisaktion für den Auftrag greift.
 
 |====
 
@@ -580,7 +580,7 @@ _Beachte_, dass du mindestens zwei Gruppen angelegt haben musst, damit die Aufte
 |Die Aktion ändert die xref:artikel:markierungen.adoc#[Markierung] an einem Auftrag. Wähle aus der Dropdown-Liste entweder *Markierung entfernen* aus, oder die Markierung, die der Auftrag durch die Ereignisaktion erhalten soll.
 
 | *Tags hinzufügen/entfernen*
-|Diese Aktion kann nur bei Nachbestellungen, Umbuchungen und Abonnements verwendet werden, da nur diesen Auftragstypen Tags zugeordnet werden können. Die Aktion fügt je nach Auswahl xref:willkommen:tags.adoc#[Tags] zum einem Auftrag dieses Typs hinzu oder entfernt sie. Wähle entweder die Funktion *Tag hinzufügen* oder die Funktion *Tag entfernen* aus. Nutze dann das Eingabefeld, um die Tags, die hinzugefügt oder entfernt werden sollen, zu bestimmen. +
+|Diese Aktion kann nur bei Nachbestellungen, Umbuchungen und Abonnements verwendet werden, da nur diesen Auftragstypen Tags zugeordnet werden können. Die Aktion fügt je nach Auswahl Tags zum einem Auftrag dieses Typs hinzu oder entfernt sie. Wähle entweder die Funktion *Tag hinzufügen* oder die Funktion *Tag entfernen* aus. Nutze dann das Eingabefeld, um die Tags, die hinzugefügt oder entfernt werden sollen, zu bestimmen. +
 Die Aktion kann mehrmals hinzugefügt werden, so dass in einer Ereignisaktion Tags sowohl hinzugefügt als auch entfernt werden können, wenn nötig.
 
 | *Mahnstufe ändern*
