--- a/docs/de-de/modules/daten/pages/formatdesigner-auftraege.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-auftraege.adoc
@@ -1,6 +1,7 @@
 = Aufträge
 :keywords: Auftragsexport, Aufträge exportieren, order export
 :description: Mit Formaten des Typs Aufträge exportierst du Aufträge.
+:page-aliases: auftraege.adoc
 :author: team-payment-order
 
 Mit Formaten des Typs *order* exportierst du Aufträge.
