--- a/docs/de-de/modules/daten/pages/formatdesigner-eigenschaften.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-eigenschaften.adoc
@@ -1,5 +1,6 @@
 = Eigenschaften
 :keywords: Eigenschaft exportieren, Eigenschaften exportieren, Exportieren Eigenschaft, Exportieren Eigenschaften, Eigenschaft Export, Eigenschaften Export, Eigenschaft-Export, Eigenschaften-Export, Export Eigenschaft, Export Eigenschaften, Eigenschaftsexport, Eigenschaftenexport, Eigenschaftexport
+:page-aliases: eigenschaften.adoc
 :author: team-item
 
 ////
