--- a/docs/de-de/modules/daten/pages/formatdesigner-kategorien.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-kategorien.adoc
@@ -1,5 +1,6 @@
 = Kategorien
 :keywords: Kategorie exportieren, Kategorien exportieren, Exportieren Kategorie, Exportieren Kategorien, Kategorie Export, Kategorien Export, Kategorie-Export, Kategorien-Export, Export Kategorie, Export Kategorien, Kategorieexport, Kategorienexport
+:page-aliases: kategorien.adoc
 :author: team-item
 
 Mit Formaten des Typs *category* exportierst du Kategorien.
