--- a/docs/de-de/modules/daten/pages/formatdesigner-warenbestand.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-warenbestand.adoc
@@ -1,6 +1,7 @@
 = stock
 :keywords: FormatDesigner, Format-Typen, Export, Daten, Datenexport, Daten exportieren, Warenbestand, Warenbestand exportieren, Bestand exportieren, Bestandsdaten exportieren, Warenbestandsdaten exportieren
 :description: Mit Formaten des Typs stock exportierst du Warenbestandsdaten.
+:page-aliases: warenbestand.adoc
 :author: team-stock
 
 Mit Formaten des Typs *stock* exportierst du Warenbestandsdaten.
