--- a/docs/en-gb/modules/data/pages/formatdesigner-attributes.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-attributes.adoc
@@ -1,5 +1,6 @@
 = Attribute
 :keywords: Exporting attribute, Exporting attributes, Attribute exporting, Attributes exporting, Attribute export, Attributes export, Export attribute, Export attributes, Attribute-Export, Attributes-Export, Export-Attribute, Export-Attributes
+:page-aliases: attributes.adoc
 :author: team-item
 
 Use the *attribute* format to export item attributes.
