--- a/docs/en-gb/modules/data/pages/formatdesigner-categories.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-categories.adoc
@@ -1,5 +1,6 @@
 = Categories
 :keywords: Exporting category, Exporting categories, Category exporting, Categories exporting, Category export, Categories export, Export category, Export categories, Category-Export, Categories-Export, Export-Category, Export-Categories
+:page-aliases: categories.adoc
 :author: none
 
 Use the *category* format to export categories.
