--- a/docs/en-gb/modules/data/pages/formatdesigner-orders.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-orders.adoc
@@ -1,6 +1,7 @@
 = Orders
 :keywords: order export, export orders, exporting orders
 :description: Use the order format to export orders.
+:page-aliases: orders.adoc
 :author: team-order-payment
 
 Use the *order* format to export orders.
