--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -57,14 +57,14 @@ After installing and setting up the plugin, the automatic processes described in
 * When you receive the order, you ship the products (drop shipping).
 
 [#300]
-== Installing a plugin
+== Installing the plugin
 
-To connect to {market} in plentymarkets, install the link:https://marketplace.plentymarkets.com/en/mytoys_54776[myToys plugin^] in your plentymarkets system. You can download this and many other plugins in the link:https://marketplace.plentymarkets.com/en[plentyMarketplace^]{nbsp}icon:external-link[].
+To connect to {market} in plentymarkets, install the link:https://marketplace.plentymarkets.com/en/mytoys_54776[myToys plugin^] in your plentymarkets system. You can download this and other plugins in the link:https://marketplace.plentymarkets.com/en[plentyMarketplace^]{nbsp}icon:external-link[].
 
 :plugin: myToys
 include::partial$plugin-installation.adoc[]
 
-[#300]
+[#market-setup]
 == Setting up the market
 
 After you have installed the plugin, set up the market in plentymarkets.
@@ -291,13 +291,14 @@ The following rules apply to product names:
 | [option-itemtext]*Texts*
 | map the plentymarkets data field *Item text » Item text*. +
 The item description can be up to 4000 characters long. Longer text is cut off after 4000 characters and `...` is added. +
+
 *_Note:_* Do you use HTML tags to format your item texts? +
 {market} cannot process HTML tags. As such, HTML tags are removed during the export. As such, check your item texts. If you use a lot of HTML tags, you might want to create a property in which you save item descriptions without HTML tags.
 
 | *Colour*
 | The colour is used to create variations in plentymarkets and on {market}.
 
-There are two marketplace data fields for exporting colours:
+You need two marketplace data fields for exporting colours:
 
 [cols="1,2"]
 !===
@@ -311,7 +312,7 @@ There are two marketplace data fields for exporting colours:
 !===
 
 [.collapseBox]
-.Do you use other colour shades than {market}?
+.Do you have different colour shades than {market}, for example “light red”, “dark read” and “cherry red” instead of “red”?
 --
 If you use colour shades that differ from {market}, you can map fallback data fields.
 
@@ -319,7 +320,7 @@ If you use colour shades that differ from {market}, you can map fallback data fi
 
 Map these attribute/property values to the marketplace data field *Red* as fallback data fields.
 
-Customers can then find the variation with all of the three different properties when they filter for *Red* on {market}.
+Customers can then find the variation with all of the three different properties when they filter for the colour *Red* on {market}.
 --
 
 | *Size*
@@ -329,16 +330,24 @@ Customers can then find the variation with all of the three different properties
 | *RRP*
 | Map a sales price of the type *RRP*. The referrer {market} must be activated for this sales price.
 
-RRP are shown based on the following logic:
+RRP are shown on {market} based on the following logic:
 
 * If the sales price is lower than the RRP, the RRP is shown on {market} as a strikethrough price.
 * If the sales prices is higher than or equal to the RRP, the RRP will not be displayed on {market}.
 
-*_Note:_* Do you not have any RRP, for example because you are the manufacturer? Assign the same sales price as for the marketplace data field *Net sales price*. This way, no strikethrough price will be displayed on {market}.
+*_Note:_* You do not have any RRP, for example because you are the manufacturer? Then assign the same sales price as for the marketplace data field *Net sales price*. This way, no strikethrough price will be displayed on {market}.
 
 | [option-bulletpoints]*Bullet points*
-| Additional information on an item is displayed on the {market} item page by means of bullet points. Up to 255 characters can be exported per bullet point. The text is cut off after 355 characters and `...` is added. We recommend that you create a separate property of the type *Text* for each bullet point. +
-*_Note:_* Do not use HTML tags in the properties for the bullet points. {market} cannot process HTML tags. As such, HTML tags are removed during the export.
+| Additional information on an item is displayed on the {market} item page using bullet points.
+
+The following rules apply for bullet points:
+
+* Up to 255 characters can be exported per bullet point.
+* The text is cut off after 355 characters and `...` is added.
+* {market} cannot process HTML tags. As such, HTML tags are removed during the export. +
+*_Tip:_* Do not use HTML tags in the properties for the bullet points.
+
+*_Recommendation:_* Create a separate property of the type *Text* for each bullet point.
 
 | *Season*
 | Map the values of a plentymarkets property to the seasons. +
@@ -423,15 +432,15 @@ The following values can be used:
 --
 
 . Create a property with the following settings:
-  ** Name: Age group
-  ** Section: Item
-  ** Type: Selection
-  ** Selection values:
-    ** *new born*
-    ** *baby*
-    ** *mini*
-    ** *teen*
-    ** *adult*
+* Name: Age group
+* Section: Item
+* Type: Selection
+* Selection values:
+  ** *new born*
+  ** *baby*
+  ** *mini*
+  ** *teen*
+  ** *adult*
 . In the menu *Item » Edit item » [Open item] » [Open variation] » Variation tab: Settings*, link the variation to the property.
 . Select the property value that suits the variation.
 --
@@ -449,7 +458,12 @@ include::partial$catalogue-activation.adoc[]
 [#order-documents]
 == Preparing order documents
 
-The {market} letterhead has to be included on order documents for {market}. The documents also must contain specific information.
+The invoices for {market} orders are sent by {market}. As such, you only need the following order documents for {market} orders:
+
+* Delivery notes
+* Return slips
+
+Adjust these order documents to the requirements of {market}. Check the following chapters to find out how. This information is structured like this:
 
 * <<#delivery-notes, Prepare delivery notes>>
 * <<#return-notes, Preparing return slips>>
@@ -457,8 +471,17 @@ The {market} letterhead has to be included on order documents for {market}. The 
 [#delivery-notes]
 === Preparing delivery notes
 
-* <<#1300, How to upload a PDF template for delivery notes>>
-* <<#16003, How to adjust delivery notes for {market}>>
+Delivery notes for {market} orders must contain the following information:
+
+* {market} letterhead
+* External order number
+* External customer number
+* EAN
+
+To ensure this, carry out the steps described in this chapter:
+
+. Upload a PDF template for delivery notes (<<#1300, Wie?>>)
+. Adjust the template for delivery notes for {market}. (<<#16003, How?>>)
 
 [#1300]
 ==== Uploading a PDF template for delivery notes
@@ -468,7 +491,7 @@ The {market} letterhead has to be included on order documents for {market}. The 
 [.instruction]
 Uploading a PDF template for delivery notes:
 
-. Download the PDF template for {market} delivery notes and save it on your computer:
+. Download the PDF template for {market} delivery notes to your computer:
   ** link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/myToys/myToys-Lieferschein.pdf[Download PDF template]
 . Go to *Setup » Client » Select client » Locations » Location: Germany » Documents » Delivery note*.
 . Click on the tab *PDF template*.
@@ -483,34 +506,111 @@ Uploading a PDF template for delivery notes:
 . In the line *Template*, click on *Choose template file*.
 . Select the PDF template for {market} delivery notes.
 . Click on *Upload template* (icon:save[set=plenty]). +
-→ The template is uploaded.
+→ The template is uploaded. +
+*_Tip:_* In the same menu, also adjust the template for {market} delivery notes. The next chapter shows you how.
 
 [#16003]
-==== Adjusting delivery notes
+==== Adjusting template for delivery notes
 
-In addition to the {market} letterhead, delivery notes for {market} orders must also contain the following information:
+In addition to the {market} logo, delivery notes for {market} orders must also contain the following information:
 
+* EAN
 * External order number
 * External customer number
-* EAN
+
+In addition, {market} must not show any prices.
+
+To make sure that your delivery notes comply with these rules, adjust the template for delivery note as described below.
 
 [.instruction]
-Adjusting delivery notes:
+Adjusting template for delivery notes:
 
 . Go to *Setup » Client » Standard » Locations » Germany » Documents » Invoice » Tab: Template*.
-. Scroll to the *Columns stock units*.
-. For the setting *Item name*, activate the option *EAN*.
-. Scroll down to the area *Optional elements below stock unit table*.
-. For the setting *External customer number*, select the option *Yes* from the drop-down list.
-. For the setting *External customer number*, select the option *Yes* from the drop-down list.
+. Adjust the template settings as described in <<table-delivery-notes>>.
 . Save (icon:save[set=plenty]) the settings. +
-→ The information is shown on delivery notes.
+→ The necessary information is shown on delivery notes.
+
+[[table-delivery-notes]]
+.Settings for {market} delivery notes
+[cols="2,3a"]
+|====
+|Setting |Option
+
+//tag::document-settings[]
+2+| *Columns stock units* area
+
+| *Item name*
+| |Activate option *EAN*.
+
+| *Unit price*; +
+*Total price (net)*; +
+*Unit price (gross)*; +
+*Total price (gross)*; +
+*RRP*; +
+*Discount (percent)*; +
+*Unit price without discount (gross)*; +
+*Unit price without discount (net)*
+| In the drop-down list next to the input field, select the option *Pos*. As a result, the price is not shown on the document.
+
+*_Background:_* {market} order documents must not contain any price details.
+
+.*_Example:_* Settings for *Unit price* and *Total price (net)*
+image::markets:mytoys-delivery-note-settings-1.png[]
+
+2+| Area *Totals*
+
+| *Value of items (net)*; +
+*Shipping costs (net)*; +
+*Subtotal (net, total)*; +
+*Subtotal (net, each page except for the last one)*; +
+*VAT*; +
+*Value of items (gross)*; +
+*Shipping costs (gross)*; +
+*Invoice amount (gross)*; +
+*Partial payment already made*; +
+*Pending amount (gross)*; +
+*Discount (gross)*; +
+*Discount (net)*; +
+*Coupon amount (net)*; +
+*Coupon amount (gross)*; +
+*Coupon amount (gift card)*; +
+*Invoice amount minus gift card*
+| Empty the field names. As a result, the totals are not shown on the document.
+
+*_Background:_* {market} order documents must not contain any price details.
+
+.*_Example:_* Settings for *Value of items (net)* and *Shipping costs (net)*
+image::markets:mytoys-delivery-note-settings-1.png[]
+
+2+| *Optional elements below stock unit table* area
+
+| *External order number*
+| Select the option *Yes*.
+
+image::markets:mytoys-delivery-note-settings-2.png[]
+
+| *External customer number*
+| Select the option *Yes*.
+
+image::markets:mytoys-delivery-note-settings-3.png[]
+
+|====
+//end::document-settings[]
 
 [#return-notes]
 === Preparing return slips
 
-* <<#1150, Upload a PDF template for return slips>>
-* <<#1150-1, How to adjust return slips for {market}>>
+Return slips for {market} orders must contain the following information:
+
+* {market} letterhead
+* EAN
+* External order number
+* External customer number
+
+To ensure this, carry out the steps described in this chapter:
+
+. Upload a PDF template for return slips. (<<#1150, How?>>)
+. Adjust the template for return slips for {market}. (<<#1150-1, How?>>)
 
 [#1150]
 ==== Uploading a PDF template for return slips
@@ -521,7 +621,7 @@ Proceed as described below to upload a xref:orders:order-documents.adoc#170[PDF 
 [.instruction]
 Uploading a PDF template for return slips:
 
-. Download the PDF template for {market} return slips and save it on your computer:
+. Download the PDF template for {market} return slips to your computer:
   ** link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/myToys/myToys-Retourenschein.pdf[Download PDF template]
 . Go to *Setup » Client » Select client » Locations » Location: Germany » Documents » Return slip*.
 . Click on the tab *PDF template*.
@@ -536,28 +636,37 @@ Uploading a PDF template for return slips:
 . In the line *Template*, click on *Choose template file*.
 . Select the PDF template for {market} return slips.
 . Click on *Upload template* (icon:save[set=plenty]). +
-→ The template is uploaded.
+→ The template is uploaded. +
+*_Tip:_* In the same menu, also adjust the template for {market} return slips. The next chapter shows you how.
 
 [#1150-1]
-==== Adjusting return slips
+==== Adjusting template for return slips
 
 In addition to the {market} letterhead, return slips for {market} orders must also contain the following information:
 
+* EAN
 * External order number
 * External customer number
-* EAN
+
+In addition, {market} return slips must not show any prices.
+
+To make sure that your return slips comply with these rules, adjust the template for return slips as described below.
 
 [.instruction]
-Adjusting return slips:
+Adjusting template for return slips:
 
 . Go to *Setup » Client » Standard » Locations » Germany » Documents » Return slip » Tab: Template*.
-. Scroll to the *Columns stock units*.
-. For the setting *Item name*, activate the option *EAN*.
-. Scroll down to the area *Optional elements below stock unit table*.
-. For the setting *External customer number*, select the option *Yes* from the drop-down list.
-. For the setting *External customer number*, select the option *Yes* from the drop-down list.
+. Adjust the template settings as described in <<#table-return-notes>>.
 . Save (icon:save[set=plenty]) the settings. +
-→ The information is shown on return slips.
+→ The required information is shown on return slips.
+
+[[table-return-notes]]
+.Settings for {market} return slips
+[cols="2,3a"]
+|====
+|Setting |Option
+
+include::page$mytoys.adoc[tag=document-settings]
 
 [#order-processing]
 == Automating order processing
