--- a/docs/en-gb/modules/orders/pages/generating-pick-list.adoc
+++ b/docs/en-gb/modules/orders/pages/generating-pick-list.adoc
@@ -1,4 +1,5 @@
 = Pick lists
+:page-aliases: pick-list.adoc
 :id: C8MJJH7
 :keywords: pick list, order document, generating pick list, document type, document template, picklist, picking list
 :author: team-order-payment
