--- a/docs/en-gb/modules/orders/pages/subscription.adoc
+++ b/docs/en-gb/modules/orders/pages/subscription.adoc
@@ -146,7 +146,7 @@ Data are taken over from the contact data record of the selected contact. Among 
 |If you set a xref:orders:subscription.adoc#intable-subscription-default-status[default status], it is preselected here. Available are all <<orders/managing-orders/#1220, statuses>> you have created in your plentymarkets system. If required, change the status by selecting another one from the drop-down list.
 
 |[#intable-subscription-tags]*Tags*
-|Available are all xref:welcome:tags.adoc#[tags] you have created in your plentymarkets system. Select the required tag from the drop-down list.
+|Available are all tags you have created in your plentymarkets system. Select the required tag from the drop-down list.
 
 |[#intable-subscription-invoice-address]*Invoice address*
 |Select the invoice address of the selected contact from the drop-down list. Available are the addresses saved in the corresponding contact data record. The address ID is displayed as well to differentiate between addresses, if more than one is saved for a contact. If an address is selected as the primary invoice address, it is marked by a star. +
@@ -270,7 +270,7 @@ Adding items:
 → The subscription is successfully created.
 
 [TIP]
-.Prices selection
+.Price selection
 ====
 All valid sales prices that are determined for this subscription are displayed in a drop-down list. You can select one of the displayed sales prices, this is then taken as the basis for all further calculations. If the price includes a rebate, this is shown behind the price name and amount. The optional columns *Customer class rebate* and *Category rebate* show the percentage of rebate applied. +
 If no valid sales price could be detected, *No valid sales price* is displayed in the drop-down list. You can still add the item to the cart. You can manually set a sales price in the cart. If required, the subscription can be created without a valid sales price.
@@ -374,7 +374,7 @@ If a property is already linked with an order item, it will be displayed on the 
 To edit the properties or to add more already existing properties, click on *Edit properties* (icon:edit[set=material]). The editing window *Edit properties of [selected order item with ID]* opens and you can make further adaptations.
 The following information about order item properties can be found in the editing window:
 
-* *Name* = The name of the property is displayed.
+* *Name* = The name of the property is displayed. A red asterisk marks the property as a *required* property. Whether a property is required is determined in the xref:item:properties.adoc#property-options[Options] area of the property settings. Select *Required* from the *Order options* drop-down list.
 * *Value* = The value of the property is displayed. The value is editable. Depending on the property type, you can either make a selection, edit the value, add a value or upload a file. The changes are only valid for this subscription.
 * *Surcharge* = The surcharge of the property is displayed, if a surcharge is set for the property. The surcharge is editable. The changes are only valid for this subscription.
 
